add jenkins config

--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   jenkins:
     build:
       context: .
+      dockerfile: Dockerfile.jenkins
     environment:
       - DOCKER_HOST=tcp://docker:2376
       - DOCKER_CERT_PATH=/certs/client
@@ -57,6 +58,35 @@ services:
       - MINIO_ROOT_PASSWORD=rootroot
       - MINIO_DEFAULT_BUCKETS=root
 
+  xen-orchestra:
+    build:
+      context: .
+      dockerfile: Dockerfile.xen-orchestra
+    restart: unless-stopped
+    # image: ronivay/xen-orchestra:latest
+    stop_grace_period: 1m
+    ports:
+        - "8081:80"
+    networks:
+      docker:
+        aliases: 
+          - xen-orchestra
+    environment:
+        - HTTP_PORT=80
+    cap_add:
+      - SYS_ADMIN
+      - DAC_READ_SEARCH
+    security_opt:
+      - apparmor:unconfined
+    volumes:
+      - xo-data:/var/lib/xo-server
+      - redis-data:/var/lib/redis
+    logging: &default_logging
+        driver: "json-file"
+        options:
+            max-size: "1M"
+            max-file: "2"
+
 networks:
   docker:
 
@@ -65,3 +95,5 @@ volumes:
   jenkins-data:
   jenkins-docker-certs:
   minio_data:
+  xo-data:
+  redis-data:
