--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,10 +9,11 @@ pipeline {
         }
       }
       steps {
-        dir('terraform')
+        dir('terraform'){
         sh '''
           terraform init -no-color
         '''
+        }
       }
     }
   }
