add creds jenkisfile

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,12 @@
 pipeline {
   agent any
+  environment {
+    XOA_URL = credentials('xoa_url')
+    XOA_USER = credentials('xoa_user')
+    XOA_PASSWORD = credentials('xoa_password')
+    AWS_ACCESS_KEY_ID = credentials('aws_access_key_id')
+    AWS_SECRET_ACCESS_KEY = credentials('aws_secret_access_key')
+  }
   stages {
     stage('init') {
       agent {
