--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - DOCKER_HOST=tcp://docker:2376
       - DOCKER_CERT_PATH=/certs/client
       - DOCKER_TLS_VERIFY=1
+      - MINIO_URL=
     networks:
       - docker
     ports:
