--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -33,6 +33,7 @@ pipeline {
         dir('terraform'){
         sh '''
           terraform init -no-color
+          sleep 3600
         '''
         }
       }
