set terraform init -migrate-state

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
       steps {
         dir('terraform'){
         sh '''
-          terraform init -no-color
+          terraform init -migrate-state -no-color
           sleep 3600
         '''
         }
