--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,12 +7,31 @@ pipeline {
     XOA_PASSWORD = credentials('xoa_password')
     AWS_ACCESS_KEY_ID = credentials('aws_access_key_id')
     AWS_SECRET_ACCESS_KEY = credentials('aws_secret_access_key')
-    // MINIO_URL = 
+    JENKINS_PUB_KEY = credentials('jenkins-pub-key')
+    JENKINS_PRIV_KEY = credentials('jenkins-priv-key')
   }
   
   stages {
-  
-    stage('Set IP do MinIO') {
+
+    stage('authentication') {
+      agent {
+        docker {
+          image 'alpine'
+        }
+      }
+      steps {
+        dir('terraform') {
+          withCredentials([sshUserPrivateKey(credentialsId: 'jenkins-priv-key', keyFileVariable: 'JENKINS_PRIV_KEY')]) {
+            sh '''
+              cp "$JENKINS_PRIV_KEY" id_ed25519
+              echo "$JENKINS_PUB_KEY" > id_ed25519.pub
+            '''
+          }
+        }
+      }
+    }
+
+    stage('setup minio address') {
       steps {
         script {
           def minioIp = sh(script: "getent hosts minio | awk '{ print \$1 }'", returnStdout: true).trim()
@@ -54,4 +73,5 @@ pipeline {
       }
     }
   }
+
 }
