--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - jenkins-docker-certs:/certs/client
       - jenkins-data:/var/jenkins_home
       - docker-cache:/var/lib/docker
+      - /var/run/docker.sock:/var/run/docker.sock 
 
   minio:
     image: quay.io/minio/minio:RELEASE.2024-11-07T00-52-20Z
