--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -84,7 +84,7 @@ pipeline {
       steps {
         dir('terraform'){
         sh '''
-          terraform apply -no-color
+          terraform apply -no-color -auto-approve
         '''
         }
       }
