--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -90,6 +90,30 @@ pipeline {
       }
     }
 
+    stage('kubespray') {
+      agent {
+        docker {
+          image 'quay.io/kubespray/kubespray:v2.26.0'
+          args '--entrypoint="" -u root'
+        }
+      }
+      steps {
+        dir('terraform') {
+          sh '''
+            export ANSIBLE_ROLES_PATH="$ANSIBLE_ROLES_PATH:/kubespray/roles"
+            export ANSIBLE_HOST_KEY_CHECKING="False"
+
+            ansible-playbook \
+              --become \
+              --inventory inventory.ini \
+              --extra-vars "kube_network_plugin=flannel" \
+              --private-key id_rsa \
+              /kubespray/cluster.yml
+          '''
+        }
+      }
+    }
+
   }
 
 }
