--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -107,7 +107,7 @@ pipeline {
               --become \
               --inventory inventory.ini \
               --extra-vars "kube_network_plugin=flannel" \
-              --private-key id_rsa \
+              --private-key id_ed25519 \
               /kubespray/cluster.yml
           '''
         }
