add destroy option to pipeline

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,6 +11,14 @@ pipeline {
     JENKINS_PRIV_KEY = credentials('jenkins-priv-key')
   }
   
+  parameters {
+    choice(
+      name: 'CREATE_OR_DESTROY',
+      choices: ['Create', 'Destroy'],
+      description: 'Would you like to create or destroy the Kubernetes cluster?'
+    )
+  }
+
   stages {
 
     stage('authentication') {
@@ -110,6 +118,27 @@ pipeline {
               --private-key id_ed25519 \
               /kubespray/cluster.yml
           '''
+        }
+      }
+    }
+
+    stage('destroy') {
+      agent {
+        docker {
+          image 'hashicorp/terraform:1.9.8'
+          args '--entrypoint=""'
+        }
+      }
+      steps {
+        dir('kubernetes/02_kubernetes_production_ready/terraform') {
+          sh '''
+            terraform apply -destroy -no-color -auto-approve
+          '''
+        }
+      }
+      when {
+        expression {
+          params.CREATE_OR_DESTROY == "Destroy"
         }
       }
     }
