--- a/jenkins/jenkins/docker-compose.yml
+++ b/jenkins/jenkins/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.1'
 services:
   jenkins:
     build:
-      context: /jenkins
+      context: .
+      dockerfile: Dockerfile.jenkins
     restart: always
     environment:
       - DOCKER_HOST=tcp://docker:2376
