--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -3,9 +3,10 @@ version: '3.1'
 services:
   jenkins:
     build:
-      context: /jenkins
+      context: jenkins/
     restart: always
     environment:
+      - JENKINS_ADMIN_PASSWORD=admin
       - DOCKER_HOST=tcp://docker:2376
       - DOCKER_CERT_PATH=/certs/client
       - DOCKER_TLS_VERIFY=1
@@ -63,7 +64,6 @@ services:
   xen-orchestra:
     build:
       context: xen-orchestra/
-      # dockerfile: Dockerfile.xen-orchestra
     restart: unless-stopped
     stop_grace_period: 1m
     ports:
