--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -56,10 +56,12 @@ services:
           - minio
     volumes:
       - minio_data:/data
+      - ./minio/create-user.sh:/docker-entrypoint-init.d/create-user.sh
     environment:
       - MINIO_ROOT_USER=root
       - MINIO_ROOT_PASSWORD=rootroot
       - MINIO_DEFAULT_BUCKETS=root
+    # entrypoint: /bin/sh /docker-entrypoint-init.d/create-user.sh 
 
   xen-orchestra:
     build:
