add xcp to xenorchestra

--- a/jenkins/.env
+++ b/jenkins/.env
@@ -1,3 +1,6 @@
+export XCP_MASTER_IP=192.168.1.10
+export XCP_MASTER_USER=root
+export XCP_MASTER_PASSWORD=m3gaF0x50
 export XOA_USER=admin@admin.net
 export XOA_PASSWORD=admin
 export AWS_ACCESS_KEY_ID=UKplFi0qazj0gX22pSqX
