--- a/jenkins/xen-orchestra/Dockerfile
+++ b/jenkins/xen-orchestra/Dockerfile
@@ -6,6 +6,5 @@ USER root
 
 RUN npm install --global xo-cli
 
-RUN xo-cli register --allowUnauthorized http://localhost admin@admin.net admin
 
-RUN xo-cli server.add host=${XCP_MASTER_IP} username="${XCP_USER}" password="${XCP_PASSWORD}" autoConnect=true allowUnauthorized=true
+# docker exec -it jenkins-xen-orchestra-1 xo-cli register --allowUnauthorized http://localhost admin@admin.net admin && xo-cli server.add host=${XCP_MASTER_IP} username="${XCP_USER}" password="${XCP_PASSWORD}" autoConnect=true allowUnauthorized=true
