--- a/jenkins/.env
+++ b/jenkins/.env
@@ -1,7 +1,9 @@
-export XCP_MASTER_IP=192.168.1.10
-export XCP_USER=root
-export XCP_PASSWORD=m3gaFox50
-export XOA_USER=admin@admin.net
-export XOA_PASSWORD=admin
-export AWS_ACCESS_KEY_ID=UKplFi0qazj0gX22pSqX
-export AWS_SECRET_ACCESS_KEY=WEX3Ls2iBFHiGwToZoUPgAgtotwc3vTA6w32gP3s
+XCP_MASTER_IP=192.168.1.10
+XCP_USER=root
+XCP_PASSWORD=m3gaFox50
+XOA_USER=admin@admin.net
+XOA_PASSWORD=admin
+AWS_ACCESS_KEY_ID=terraform
+AWS_SECRET_ACCESS_KEY=terraform123
+SSH_PUBLIC_KEY=/home/azevedo/.ssh/id_rsa.pub
+SSH_PRIVATE_KEY=/home/azevedo/.ssh/id_rsa
