--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - XCP_USER=${XCP_USER}
       - XCP_PASSWORD=${XCP_PASSWORD}
       - XOA_USER=${XOA_USER}
-      - XOA_PASSWORD={XOA_PASSWORD}
+      - XOA_PASSWORD=${XOA_PASSWORD}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - SSH_PUBLIC_KEY=/certs/id_ed25519.pub
