--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,24 +20,28 @@ pipeline {
 
   stages {
 
-    stage('debug environment') {
-      agent {
-        docker {
-          image 'alpine'
-        }
-      }
+    stage('debug real credentials') {
       steps {
-        sh '''
-          echo "==== DEBUG ENVIRONMENT VARIABLES ===="
-          echo "CREATE_OR_DESTROY=${CREATE_OR_DESTROY}"
-          echo "XOA_USER=${XOA_USER}"
-          echo "XOA_PASSWORD=${XOA_PASSWORD}"
-          echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}"
-          echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}"
-          echo "JENKINS_PUB_KEY=${JENKINS_PUB_KEY}"
-          echo "JENKINS_PRIV_KEY=${JENKINS_PRIV_KEY}"
-          echo "======================================"
-        '''
+        withCredentials([
+          usernamePassword(credentialsId: 'xoa_user', usernameVariable: 'REAL_XOA_USER', passwordVariable: 'REAL_XOA_PASSWORD'),
+          string(credentialsId: 'aws_access_key_id', variable: 'REAL_AWS_ACCESS_KEY_ID'),
+          string(credentialsId: 'aws_secret_access_key', variable: 'REAL_AWS_SECRET_ACCESS_KEY'),
+          string(credentialsId: 'jenkins-pub-key', variable: 'REAL_JENKINS_PUB_KEY'),
+          sshUserPrivateKey(credentialsId: 'jenkins-priv-key', keyFileVariable: 'REAL_JENKINS_PRIV_KEY_FILE')
+        ]) {
+          sh '''
+            echo "==== DEBUG RAW CREDENTIALS ===="
+            echo "REAL_XOA_USER=$REAL_XOA_USER"
+            echo "REAL_XOA_PASSWORD=$REAL_XOA_PASSWORD"
+            echo "REAL_AWS_ACCESS_KEY_ID=$REAL_AWS_ACCESS_KEY_ID"
+            echo "REAL_AWS_SECRET_ACCESS_KEY=$REAL_AWS_SECRET_ACCESS_KEY"
+            echo "REAL_JENKINS_PUB_KEY=$REAL_JENKINS_PUB_KEY"
+            echo "REAL_JENKINS_PRIV_KEY_FILE (path)=$REAL_JENKINS_PRIV_KEY_FILE"
+            echo "==============================="
+            echo "PRIVATE KEY CONTENT:"
+            cat $REAL_JENKINS_PRIV_KEY_FILE
+          '''
+        }
       }
     }
 
