--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,7 +7,6 @@ pipeline {
     AWS_ACCESS_KEY_ID = credentials('aws_access_key_id')
     AWS_SECRET_ACCESS_KEY = credentials('aws_secret_access_key')
     JENKINS_PUB_KEY = credentials('jenkins-pub-key')
-    JENKINS_PRIV_KEY = credentials('jenkins-priv-key')
   }
   
   parameters {
@@ -16,55 +15,61 @@ pipeline {
       choices: ['Create', 'Destroy'],
       description: 'Would you like to create or destroy the Kubernetes cluster?'
     )
+    booleanParam(
+      name: 'DEBUG',
+      defaultValue: false,
+      description: 'Se ativado, exporta os valores das credenciais como artefatos para depuração'
+    )
   }
 
   stages {
 
-    stage('debug real credentials') {
+    stage('Exportar credenciais para artefatos') {
+      when {
+        expression { return params.DEBUG }
+      }
       steps {
         withCredentials([
-          usernamePassword(credentialsId: 'xoa_user', usernameVariable: 'REAL_XOA_USER', passwordVariable: 'REAL_XOA_PASSWORD'),
+          string(credentialsId: 'xoa_user', variable: 'REAL_XOA_USER'),
+          string(credentialsId: 'xoa_password', variable: 'REAL_XOA_PASSWORD'),
           string(credentialsId: 'aws_access_key_id', variable: 'REAL_AWS_ACCESS_KEY_ID'),
           string(credentialsId: 'aws_secret_access_key', variable: 'REAL_AWS_SECRET_ACCESS_KEY'),
           string(credentialsId: 'jenkins-pub-key', variable: 'REAL_JENKINS_PUB_KEY'),
-          sshUserPrivateKey(credentialsId: 'jenkins-priv-key', keyFileVariable: 'REAL_JENKINS_PRIV_KEY_FILE')
         ]) {
           sh '''
-            echo "==== DEBUG RAW CREDENTIALS ===="
-            echo "REAL_XOA_USER=$REAL_XOA_USER"
-            echo "REAL_XOA_PASSWORD=$REAL_XOA_PASSWORD"
-            echo "REAL_AWS_ACCESS_KEY_ID=$REAL_AWS_ACCESS_KEY_ID"
-            echo "REAL_AWS_SECRET_ACCESS_KEY=$REAL_AWS_SECRET_ACCESS_KEY"
-            echo "REAL_JENKINS_PUB_KEY=$REAL_JENKINS_PUB_KEY"
-            echo "REAL_JENKINS_PRIV_KEY_FILE (path)=$REAL_JENKINS_PRIV_KEY_FILE"
-            echo "==============================="
-            echo "PRIVATE KEY CONTENT:"
-            cat $REAL_JENKINS_PRIV_KEY_FILE
+            echo "$REAL_XOA_USER" > xoa_user.txt
+            echo "$REAL_XOA_PASSWORD" > xoa_password.txt
+            echo "$REAL_AWS_ACCESS_KEY_ID" > aws_access_key_id.txt
+            echo "$REAL_AWS_SECRET_ACCESS_KEY" > aws_secret_access_key.txt
+            echo "$REAL_JENKINS_PUB_KEY" > jenkins_pub_key.txt
           '''
         }
+
+        archiveArtifacts artifacts: 'xoa_user.txt', onlyIfSuccessful: true
+        archiveArtifacts artifacts: 'xoa_password.txt', onlyIfSuccessful: true
+        archiveArtifacts artifacts: 'aws_access_key_id.txt', onlyIfSuccessful: true
+        archiveArtifacts artifacts: 'aws_secret_access_key.txt', onlyIfSuccessful: true
+        archiveArtifacts artifacts: 'jenkins_pub_key.txt', onlyIfSuccessful: true
       }
     }
 
-
-
-
-//     stage('authentication') {
-//       agent {
-//         docker {
-//           image 'alpine'
-//         }
-//       }
-//       steps {
-//         dir('terraform') {
-//           withCredentials([sshUserPrivateKey(credentialsId: 'jenkins-priv-key', keyFileVariable: 'JENKINS_PRIV_KEY')]) {
-//             sh '''
-//               cp "$JENKINS_PRIV_KEY" id_ed25519
-//               echo "$JENKINS_PUB_KEY" > id_ed25519.pub
-//             '''
-//           }
-//         }
-//       }
-//     }
+    stage('authentication') {
+      agent {
+        docker {
+          image 'alpine'
+        }
+      }
+      steps {
+        dir('terraform') {
+          withCredentials([sshUserPrivateKey(credentialsId: 'jenkins-priv-key', keyFileVariable: 'JENKINS_PRIV_KEY')]) {
+            sh '''
+              cp "$JENKINS_PRIV_KEY" id_ed25519
+              echo "$JENKINS_PUB_KEY" > id_ed25519.pub
+            '''
+          }
+        }
+      }
+    }
 
 //     stage('setup terraform endpoints') {
 //       steps {
@@ -186,5 +191,5 @@ pipeline {
 //     }
 
   }
-
 }
+
