--- a/jenkins/.env
+++ b/jenkins/.env
@@ -5,5 +5,5 @@ XOA_USER=admin@admin.net
 XOA_PASSWORD=admin
 AWS_ACCESS_KEY_ID=terraform
 AWS_SECRET_ACCESS_KEY=terraform123
-SSH_PUBLIC_KEY=/home/azevedo/.ssh/id_rsa.pub
-SSH_PRIVATE_KEY=/home/azevedo/.ssh/id_rsa
+SSH_PUBLIC_KEY=/home/rodrigo/.ssh/id_ed25519.pub
+SSH_PRIVATE_KEY=/home/rodrigo/.ssh/id_ed25519
