--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -52,24 +52,26 @@ pipeline {
         archiveArtifacts artifacts: 'jenkins_pub_key.txt', onlyIfSuccessful: true
       }
     }
-
-    stage('authentication') {
-      agent {
-        docker {
-          image 'alpine'
-        }
-      }
-      steps {
-        dir('terraform') {
-          withCredentials([sshUserPrivateKey(credentialsId: 'jenkins-priv-key', keyFileVariable: 'JENKINS_PRIV_KEY')]) {
-            sh '''
-              cp "$JENKINS_PRIV_KEY" id_ed25519
-              echo "$JENKINS_PUB_KEY" > id_ed25519.pub
-            '''
-          }
+    
+stage('authentication') {
+  agent {
+    docker {
+      image 'alpine'
+    }
+  }
+  steps {
+    dir('terraform') {
+      script {
+        withCredentials([sshUserPrivateKey(credentialsId: 'jenkins-priv-key', keyFileVariable: 'JENKINS_PRIV_KEY')]) {
+          sh '''
+            cp "$JENKINS_PRIV_KEY" id_ed25519
+            echo "$JENKINS_PUB_KEY" > id_ed25519.pub
+          '''
         }
       }
     }
+  }
+}
 
 //     stage('setup terraform endpoints') {
 //       steps {
